gutenprint (5.2.1-2) experimental; urgency=low

  [ Roger Leigh ]
  * debian/cups-driver-gutenprint.postinst: Automatically upgrade print
    queues using the obsolete canon and epson backends.  Attempt to
    determine the most appropriate alternative backend from the device
    name.
  * debian/compat: Update to debhelper v7 compatibility.
  * debian/rules: realclean: Remove redundant removal of -stamp files.
  * debian/control:
    + Add W. van den Akker to Uploaders.
    + ijsgutenprint: Recommend foomatic-db-gutenprint.
    + Update description of GIMP Print plugin.
  * debian/cups-driver-gutenprint.NEWS: New file.  Document automatic
    upgrade of print queue backends. 
  * debian/cups-driver-gutenprint.*: Replace use of cupsys with cups.

 -- Roger Leigh <rleigh@debian.org>  Thu, 30 Oct 2008 23:55:47 +0000

gutenprint (5.2.1-1) experimental; urgency=low

  [ W. van den Akker ]
  * Upgraded to Standards version 3.8.0.
  * debian/*: Update version from 5.1 to 5.2. 

  [ Roger Leigh ]
  * New upstream stable release.
  * debian/control.in: Add Vcs-Browser and Vcs-Git fields. 
  * debian/control.in: Remove, leaving debian/control.
  * debian/control: Remove unnecessary version information in package
    descriptions.
  * debian/control: Rename cupsys-driver-gutenprint to
    cups-driver-gutenprint (already done in 5.0 branch).
  * debian/control: Remove dependencies prior to Lenny, including
    unneeded versioning and old transitional dependencies.
  * debian/rules: Remove library soname substitution in package names. 
  * debian/README.building: Remove old outdated instructions. 
  * debian/patches/20_fix_gimpprint_menu_entry.dpatch: Make executable. 

 -- Roger Leigh <rleigh@debian.org>  Thu, 30 Oct 2008 00:27:41 +0000

gutenprint (5.1.98.2-2) experimental; urgency=low

  * debian/cupsys-driver-gutenprint.postinst: Remove version suffix from
    cups-genppdupdate.
  * debian/rules, debian/cupsys-driver-gutenprint.install: Remove